# project_migrate

./: README.md
DDBApp/: .gitignore  DDBApp.rc  DDBApp.sln  DDBApp.vcxproj  DDBApp.vcxproj.filters  Version.h  resource.h  stdafx.h
DDBApp/include/: BaseCSLock.h  BaseModule.h  BaseThread.h  BaseTimer.h  BaseWindow.h  EventManager.h  ExitEvent.h  GroupMessage.h  IExit.h  LogMicro.h  Message.h  MessageCenter.h  MessagePump.h  ModuleManager.h  Plugin.h  Singleton.h  Singleton_Export.h  ThreadManager.h  TimerManager.h  UIHungCheakThread.h  log4z.h
DDBApp/src/: BaseModule.cpp  BaseThread.cpp  BaseTimer.cpp  BaseWindow.cpp  EventManager.cpp  ExitEvent.cpp  IExit.cpp  MessageCenter.cpp  MessagePump.cpp  ModuleManager.cpp  Singleton.cpp  ThreadManager.cpp  TimerManager.cpp  UIHungCheakThread.cpp  dllmain.cpp  log4z.cpp  stdafx.cpp
spdlogwrapper/: .gitignore  CMakeLists.txt  README.md  main.cpp  spdlog.cpp  spdlog.h
spdlogwrapper/hlog/: CMakeLists.txt  hlog.cpp  hlog.h  log_wrapper.cpp  log_wrapper.h  log_wrapper_bindings.cpp  logpython.py  winbuild_vs2019_debug.bat  winbuild_vs2019_release.bat
spdlogwrapper/test/: CMakeLists.txt  build.sh  log_config.json  main.cpp
spdlogwrapper/test/include/: log_wrapper.h
